force-app/main/default/objects/ZCA_Approver__c/ZCA_Approver__c.object-meta.xml
<CustomObject>
    <label>ZCA_Approver</label>
    <nameField>
        <displayFormat>ZCA-{0000}</displayFormat>
        <label>ZCA_Approver Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ZCA_Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>