force-app/main/default/objects/ZCA_Approver__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <label>Approval_Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>