force-app/main/default/objects/ZCA_Approver__c/fields/CostCenter__c.field-meta.xml
<CustomField>
    <fullName>CostCenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cost Center</label>
    <referenceTo>Cost_Center__c</referenceTo>
    <relationshipLabel>ZCA_Approvers</relationshipLabel>
    <relationshipName>ZCA_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>