force-app/main/default/objects/ZCA_Approver__c/fields/PersonnelNumber__c.field-meta.xml
<CustomField>
    <fullName>PersonnelNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>ZCA_Approvers</relationshipLabel>
    <relationshipName>ZCA_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>