force-app/main/default/objects/ZCA_Approver__c/fields/WBSElement__c.field-meta.xml
<CustomField>
    <fullName>WBSElement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>ZCA_Approvers</relationshipLabel>
    <relationshipName>ZCA_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>