force-app/main/default/objects/ZCA_Approver__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>WBSElement__c</columns>
    <columns>PersonnelNumber__c</columns>
    <columns>Active__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>CostCenter__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>ExternalRefID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>